working in sim and on FPGA. needs cleanup

--- a/ressources/picorv32/Makefile
+++ b/ressources/picorv32/Makefile
@@ -131,10 +131,12 @@ firmware/firmware.bin: firmware/firmware.elf
 	$(TOOLCHAIN_PREFIX)objcopy -O binary $< $@
 	chmod -x $@
 
-firmware/firmware.elf: $(FIRMWARE_OBJS) $(ADDED_FIRMWARE_OBJS) $(TEST_OBJS) firmware/sections.lds
+# firmware/firmware.elf: $(FIRMWARE_OBJS) $(ADDED_FIRMWARE_OBJS) $(TEST_OBJS) firmware/sections.lds
+firmware/firmware.elf: $(TEST_OBJS) firmware/sections.lds
 	$(TOOLCHAIN_PREFIX)gcc -Os -mabi=ilp32 -march=rv32imv$(subst C,c,$(COMPRESSED_ISA)) -ffreestanding -nostdlib -o $@ \
 		-Wl,--build-id=none,-Bstatic,-T,firmware/sections.lds,-Map,firmware/firmware.map,--strip-debug \
-		$(FIRMWARE_OBJS) $(ADDED_FIRMWARE_OBJS) $(TEST_OBJS) -lgcc
+		$(TEST_OBJS) -lgcc
+#		$(FIRMWARE_OBJS) $(ADDED_FIRMWARE_OBJS) $(TEST_OBJS) -lgcc
 	chmod -x $@
 
 firmware/start.o: firmware/start.S
