used rvv in c code with asm (rvv.c), intrinsics other than vsetvl not found by compiler

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ ressources/picorv32_old
 ressources/RenduHARGE_Kristian
 ressources/picorv32/out
 ressources/picorv32/out1
+ressoruces/picorv32/tests/rvv_tests/*.o
